Fix missing background list image

--- a/src/styles/continentInfo.css
+++ b/src/styles/continentInfo.css
@@ -94,7 +94,6 @@
     background: url('../images/leafIcon.png') no-repeat left top;
     background-size: 2vw 4vh; 
     margin-bottom: 10px;
-    background: transparent;
 }
 
 #changeUL{
